<resources>
    <string name="app_name">Shift</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">LOG IN</string>
    <string name="forgot">FORGOT PASSWORD?</string>
    <string name="register">REGISTER</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment.</string>
    <string name="Shift">$hift</string>
    <string name="title_search">Search</string>
    <string name="email">Email</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="upcoming">Your Upcoming Jobs</string>
    <string name="recommended">Your Recommended Jobs</string>
    <string name="confirm">Confirm password</string>
    <string name="wrongInput">Incorrect username/password\!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Forgot Password not implemented</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_chat">Chat</string>
    <string name="logOut">LogOut</string>
    <string name="quit">Quit</string>
    <string name="finishTraining">Go to Training</string>
    <string name="jobDescription">Job Description</string>
    <string name="role">Role</string>
    <string name="title_activity_job_description">JobDescriptionActivity</string>
    <string name="warning">Warning:</string>
    <string name="warning_text">If you leave a job 2 days prior without the manager\'s approval, you will face punitive measures.</string>
    <string name="leave_anyway">Leave Anyway</string>
    <string name="lib">Your Library</string>
    <string name="rating">Your Rating</string>
    <string name="training">Trainings to Complete</string>
    <string name="prev">Your Previous Jobs</string>
    <string name="liked">Your Liked Jobs</string>
    <string name="welcome">Jobs</string>
    <string name="Search...">Search</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="cont">Continue</string>
    <string name="congrats">Congratulations!</string>
    <string name="finished_quiz">You have passed the quiz</string>
    <string name="failed">You have failed the quiz</string>
    <string name="try_again">Try again later</string>
    <string name="title_activity_quiz_start">QuizStartActivity</string>
    <string name="contact">Contact Manager</string>
    <string name="startQuiz">Start Quiz</string>
    <string name="description">Each quiz must be completed in one session; make sure you have a stable internet connection and you have submitted the quiz before exiting. The quiz is in English. If you don’t pass, your results will not be shared. ~15 minutes duration. You must get at least an 80% to pass and become qualified. Retry will be available in 2 hours if you do not pass.</string>

</resources>