<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.library.LibraryFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/previousRecycler"
        android:layout_width="409dp"
        android:layout_height="175dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous" />

    <TextView
        android:id="@+id/Training"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/training"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/trainingRecycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="376dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/prev"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trainingRecycler"
        android:layout_width="409dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toTopOf="@+id/previous"
        app:layout_constraintTop_toBottomOf="@+id/Training"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/libraryHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/lib"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="91dp"
        android:layout_height="21dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/rating"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="232dp"
        android:layout_height="51dp"
        android:isIndicator="true"
        android:rating="4"
        android:progressTint="#FFC107"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

    <ImageView
        android:id="@+id/history"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_history_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>